--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,4 @@
-<p>Average student age: <%= @average_age.round(2) %></p>
+<p>Average student age: <%= @students.average_age.round(2) %></p>
 <% @students.each do |student| %>
   <section id = "student-<%= student.id %>">
     <p><%= student.name %></p>
