--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,8 @@
 <% @courses.each do |course| %>
   <section id = "course-<%= course.id %>">
     <p><%= course.name %>: <%= course.student_count %></p>
+    <% course.students.in_alphabetical_order.each do |student| %>
+      <p>- <%= student.name %></p>
+    <% end %>
   </section>
 <% end %>
